# square-packing-rl

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: train.py
src/agent/: agent.py
src/environment/: map.py
